fix display issues on safari

--- a/public/theme.css
+++ b/public/theme.css
@@ -36,6 +36,7 @@ main {
     overflow: hidden;
     flex: 1;
     order: 2;
+    position: relative;
 }
 
 #main-container {
@@ -54,6 +55,7 @@ main {
     overflow-y: scroll;
     overflow-x: hidden;
     height: 100%;
+    position: absolute;
 }
 
 .message img {
